[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"
[project]
dynamic = ["version"]
name = "nbt"
dependencies = ["gzip"]
requires-python = ">= 3.6"
authors = [
    {name = "Izak Halseide", email = "hizak@pm.me"}
]
maintainers = [
    {name = "Izak Halseide", email = "hizak@pm.me"}
]
description = "A module for working with data in the Named Binary Tag file format"
readme = "README.md"
license = { file = "LICENSE.txt" }