[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"
[project]
dynamic = ["version"]
name = "nbtformat"
requires-python = ">= 3.6"
authors = [
    {name = "ihalseide", email = "ihalseide@pm.me"}
]
maintainers = [
    {name = "ihalseide", email = "ihalseide@pm.me"}
]
description = "Named Binary Tag file format reading, writing, and manipulation"
readme = "README.md"
license = { file = "LICENSE.txt" }