[metadata]
name = nbt-ihalseide
version = 0.0.1
author = Izak Nathanael Halseide
author_email = imitatio-ignotum@protonmail.com
description = A module for parsing the Named Binary Tag file format
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ihalseide/nbt-explorer
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
