[metadata]
name = nbt-ihalseide
version = 0.0.2
author = ihalseide
author_email = ihalseide@pm.me
description = Named Binary Tag file format reading, writing, and manipulation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ihalseide/nbt-explorer
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
